Bug #7966 query cache doesn't work properly with batch statements
Submitted: 17 Jan 2005 18:34 Modified: 17 Jan 2005 20:27
Reporter: Reggie Burnett Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server Severity:S3 (Non-critical)
Version:4.1.9 OS:
Assigned to: Reggie Burnett CPU Architecture:Any

[17 Jan 2005 18:34] Reggie Burnett
Description:
Incorrect results are returned from executing a batch statement multiple times with the query cache turned on.

How to repeat:
1. Enable the query cache
2. Use a connector that allows you to connect and issue batch  type statements (meaning the connector sends the entire SQL statement in one shot)
3.  Issue a batch select statement such as "select id from test where id < 50; select id from test where id > 50".
4.  Issue this statement again.
5.  note that only one resultset is returned and that is the results from the first select even though the AnotherQuery flag is set to true indicating that another resultset should be sent, however it never is.