Bug #7966  	query cache doesn't work properly with batch statements

sql_lex.cc:
  Set query to not cacheable if we are using multistatements and there are multiple statements in this query


sql/sql_lex.cc:
  Set query to not cacheable if we are using multistatements and there are multiple statements in this query